--- a/src/main/resources/templates/typelogin.html
+++ b/src/main/resources/templates/typelogin.html
@@ -20,6 +20,8 @@
 
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
+    
+
   </head>
 
   <body class="login">
@@ -31,7 +33,7 @@
         <div class="animate form login_form">
           <section class="login_content">
             <form th:action="@{/passwordlogin}" method="post" >
-              <h1>Login Form</h1>
+              <h1>Organisme Form</h1>
               <div>
              <!--   <input type="text" name="username" id="username" class="form-control" placeholder="Email" />
                 <span class="text-danger" ></span> --> 
