--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,17 +30,19 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form th:action="@{/typelogin}" method="post" >
+            <form th:action="@{/typelogin}" method="post" th:object="${contact}">
               <h1>Login Form</h1>
               <div>
-                <input type="text" name="email" id="username"   class="form-control" placeholder="Email" />
-                <span class="text-danger" ></span>
+                <input type="text"   th:field="*{email}" class="form-control" placeholder="Email" />
+                <span th:errors = "*{email}"  class="text-danger" ></span>
+                <span th:text = "${errorvalidation}" class="text-danger" ></span>
+            
               </div>
-              <!--  
+                
               <div>
-                <input type="password" name="password" id="password"  class="form-control" placeholder="password"  />
-                <span class="text-danger" ></span>
-              </div>-->
+                <input type="hidden" name="password" id="password" value="0"  class="form-control" placeholder="password"  />
+              </div>
+              
               <div>
                 <!-- <a class="btn btn-default submit" href="index">Log in</a> -->
                  <button type="submit" class="btn btn-default submit" >Next</button>
