--- a/src/main/resources/templates/passwordlogin.html
+++ b/src/main/resources/templates/passwordlogin.html
@@ -20,6 +20,12 @@
 
     <!-- Custom Theme Style -->
     <link href="../build/css/custom.min.css" rel="stylesheet">
+    
+       <script type="text/javascript">
+    function preback(){window.history.forward();}
+    setTimeout("preback()",0);
+    window.onunload=function(){null};
+    </script>
   </head>
 
   <body class="login">
@@ -30,12 +36,18 @@
       <div class="login_wrapper">
         <div class="animate form login_form">
           <section class="login_content">
-            <form th:action="@{/connect}" method="post" >
-              <h1>Login Form</h1>
+            <form th:action="@{/connect}" method="post" th:object="${contact}">
+              <h1>Password Form</h1>
               <div>
-                <input type="password" name="password" id="password"  class="form-control" placeholder="password"  />
-                <span class="text-danger" ></span>
+                <input type="password" name="password" id="password"  class="form-control" th:field="*{password}" placeholder="password"  />
+                <span th:errors = "*{password}" class="text-danger" ></span>
+                <span th:text = "${errorvalidation}" class="text-danger" ></span> 
               </div>
+              
+               <div>
+                <input type="hidden" name="email" id="email" value="hi@gmail.com"  class="form-control" placeholder="email"  />
+              </div>
+              
               <div>
                  <button type="submit" class="btn btn-default submit" >Login</button>
               </div>
