--- a/src/main/resources/templates/form_wizards.html
+++ b/src/main/resources/templates/form_wizards.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ <head>   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Gentelella Alela! | </title>
-
-    <!-- Bootstrap -->
+    
+    
+     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
     <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -17,133 +15,53 @@
     <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="build/css/custom.min.css" rel="stylesheet">
-  </head>
+<link href="build/css/custom.min.css" rel="stylesheet">
+    
+    </head>
+
+ 
+ <script>
+function includeHTML() {
+  var z, i, elmnt, file, xhttp;
+  /*loop through a collection of all HTML elements:*/
+  z = document.getElementsByTagName("*");
+  for (i = 0; i < z.length; i++) {
+    elmnt = z[i];
+    /*search for elements with a certain atrribute:*/
+    file = elmnt.getAttribute("w3-include-html");
+    if (file) {
+      /*make an HTTP request using the attribute value as the file name:*/
+      xhttp = new XMLHttpRequest();
+      xhttp.onreadystatechange = function() {
+        if (this.readyState == 4) {
+          if (this.status == 200) {elmnt.innerHTML = this.responseText;}
+          if (this.status == 404) {elmnt.innerHTML = "Page not found.";}
+          /*remove the attribute, and call this function once more:*/
+          elmnt.removeAttribute("w3-include-html");
+          includeHTML();
+        }
+      }      
+      xhttp.open("GET", file, true);
+      xhttp.send();
+      /*exit the function:*/
+      return;
+    }
+  }
+};
+</script>
+
+
+
+
 
   <body class="nav-md">
-    <div class="container body">
-      <div class="main_container">
-        <div class="col-md-3 left_col">
-          <div class="left_col scroll-view">
-            <div class="navbar nav_title" style="border: 0;">
-               <a href="index.html" class="site_title"><i class="fa fa-gg "></i> <span> Mon association </span></a>
-            </div>
-
-            <div class="clearfix"></div>
-
-            <!-- menu profile quick info -->
-            <div class="profile clearfix">
-              <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
-              </div>
-              <div class="profile_info">
-                <span>Administrateur,</span>
-                <h2>John Doe</h2>
-              </div>
-            </div>
-            <!-- /menu profile quick info -->
-
-            <br />
-
-         
-          <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-              <div class="menu_section">
-            <!--   <h3>General</h3>  -->  
-                <ul class="nav side-menu">
-               
-               
-                  <li>
-                          <a href="index.html"><i class="fa fa-bar-chart-o"></i> Tableau de bord<span ></span></a>
-                  </li>
-                  
-
-                       <li><a><i class="fa fa-sitemap"></i> Communauté <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="form.html">General Form</a></li>
-                      <li><a href="form_advanced.html">Advanced Components</a></li>
-                      <li><a href="form_validation.html">Form Validation</a></li>
-                      <li><a href="form_wizards.html">Form Wizard</a></li>
-                      <li><a href="form_upload.html">Form Upload</a></li>
-                      <li><a href="form_buttons.html">Form Buttons</a></li>
-                    </ul>
-                  </li>
-                  
-               
-                  
-                  <li><a><i class="fa fa-table"></i> Evénements <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="tables.html">Tables</a></li>
-                      <li><a href="tables_dynamic.html">Table Dynamic</a></li>
-                    </ul>
-                  </li>
-                  
-       
-                  
-                     <li><a><i class="fa fa-home"></i> Mon association <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                      <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                      <li><a href="fixed_footer.html">Fixed Footer</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-              <div class="menu_section">
-              </div></div>
-
-            <!-- /menu footer buttons -->
-           <div class="sidebar-footer hidden-small">
-              <a data-toggle="tooltip" data-placement="top" title="Paramètres">
-                <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-              </a>
-             <!--  --> <a data-toggle="tooltip" data-placement="top" title="Plein Ecran">
-                <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-              </a> 
-              
-              <a data-toggle="tooltip" data-placement="top" title="Administrateurs">
-                <span class="fa fa-users" aria-hidden="true"></span>
-              </a>
-              
-              <a data-toggle="tooltip" data-placement="top" title="Déconnexion" href="login.html">
-                <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-              </a>
-            </div>
-            <!-- /menu footer buttons -->
-          </div>
-        </div>
-
-       <div class="top_nav">
-          <div class="nav_menu">
-            <nav>
-              <div class="nav toggle">
-                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-              </div>
-
-              <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                  <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="images/img.jpg" alt="">John Doe
-                    <span class=" fa fa-angle-down"></span>
-                  </a>
-                  <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="javascript:;"> Mon Profile</a></li>
-                    <li>
-                      <a href="javascript:;">
-                        <!-- <span class="badge bg-red pull-right">50%</span> -->
-                        <span>Paramétres</span>
-                      </a>
-                    </li>
-                    
-                  <!--    <li><a href="javascript:;">Help</a></li> -->
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Deconnexion </a></li>
-                  </ul>
-                </li>
-                  </li>
-                  </ul>
-                </li>
-              </ul>
-            </nav>
-          </div>
-        </div> 
+  
+  
+  <div w3-include-html="form.html">
+  
+  </div>
+  
+  
 
         <!-- page content -->
         <div class="right_col" role="main">
@@ -452,12 +370,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- /page content -->
-
-     
-      </div>
-    </div>
+        </div> 
+       
 
     <!-- jQuery -->
     <script src="vendors/jquery/dist/jquery.min.js"></script>
@@ -472,6 +386,10 @@
     <!-- Custom Theme Scripts -->
     <script src="build/js/custom.min.js"></script>
 
+
+ <script>
+includeHTML();
+</script>
 	
   </body>
 </html>
