--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -62,7 +62,7 @@
           </section>
         </div>
 
-   <!--     <div id="register" class="animate form registration_form">
+        <div id="register" class="animate form registration_form">
           <section class="login_content">
             <form>
               <h1>Create Account</h1>
@@ -96,7 +96,7 @@
               </div>
             </form>
           </section>
-        </div> -->
+        </div>
       </div>
     </div>
   </body>
