--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -70,7 +70,7 @@ function includeHTML() {
           </section>
         </div> 
 
-        </div>-->
+        </div>
 
 
    <!--     <div id="register" class="animate form registration_form">
