--- a/src/main/resources/templates/action.html
+++ b/src/main/resources/templates/action.html
@@ -1,35 +1,33 @@
-    <div th:fragment = "userprofile">
-       
+    <div th:fragment = "action">
+       <meta charset="UTF-8"/> 
        <form action="" method = "GET">
         <div class="container-fluid">
           <div class="row">
 
             <div class="col-lg-12 col-md-12">
               <div class="card">
-                <div class="card-header card-header-warning">
-                  <h4 class="card-title">Employees Stats</h4>
-                  <p class="card-category">New employees on 15th September, 2016</p>
+                <div class="card-header card-header-info">
+                  <h4 class="card-title">Les Actions</h4>
+                  <p class="card-category">Les événement de l'organisme</p>
                 </div>
                 <div class="card-body table-responsive">
                   <table class="table table-hover">
-                    <thead class="text-warning">
-                      <th>ID</th>
-                      <th>Name</th>
-                      <th>Salary</th>
-                      <th>Country</th>
+                    <thead class="text-infouu">
+                      <th>Projet</th>
+                      <th>Créateur</th>
+                      <th>Date Creation</th>
+                      <th>Date Réalisation</th>
+                      <th>Budget</th>
+                      <th>Média</th>
                     </thead>
                     <tbody>
                       <tr>
-                        <td>1</td>
+                        <td>nom_Projet</td>
                         <td>Dakota Rice</td>
                         <td>$36,738</td>
                         <td>Niger</td>
-                      </tr>
-                      <tr>
-                        <td>2</td>
-                        <td>Minerva Hooper</td>
-                        <td>$23,789</td>
-                        <td>Curacao</td>
+                        <td>Dakota Rice</td>
+                        <td>$36,738</td>
                       </tr>
                     </tbody>
                   </table>
