--- a/src/main/resources/templates/userprofile.html
+++ b/src/main/resources/templates/userprofile.html
@@ -1,4 +1,5 @@
     <div th:fragment = "userprofile" xmlns:th="http://www.thymeleaf.org">
+
        <meta charset="UTF-8"/> 
              <div class="content">
         <div class="container-fluid">
@@ -15,19 +16,22 @@
                       <div class="col-md-5">
                         <div class="form-group">
                           <label class="bmd-label-floating">Organisme (disabled)</label>
-                          <input type="text" th:field="*{idOrganisme.nom_association}" class="form-control" disabled>
+                          <input type="text" name="organisme" th:field="*{idOrganisme.nom_association}" class="form-control" >
+                          <span th:errors = "*{idOrganisme.nom_association}"  class="text-danger" ></span>
                         </div>
                       </div>
                       <div class="col-md-3">
                         <div class="form-group">
                           <label class="bmd-label-floating">Email address</label>
                           <input type="email" th:field="*{email}" class="form-control">
+                          <span th:errors = "*{email}"  class="text-danger" ></span>
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="form-group">
                           <label class="bmd-label-floating">Password</label>
                           <input type="text" th:field="*{password}" class="form-control">
+                          <span th:errors="*{password}" class="text-danger" ></span>
                           
                         </div>
                       </div>
@@ -37,12 +41,14 @@
                         <div class="form-group">
                           <label class="bmd-label-floating">Nom</label>
                           <input type="text" th:field="*{nom}" class="form-control">
+                          <span th:errors="*{nom}" class="text-danger" ></span>
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
                           <label class="bmd-label-floating">Prenom</label>
                           <input type="text" th:field="*{prenom}" class="form-control">
+                          <span th:errors="*{prenom}" class="text-danger" ></span>
                         </div>
                       </div>
                     </div>
@@ -51,6 +57,7 @@
                         <div class="form-group">
                           <label class="bmd-label-floating">Lieu de naissance</label>
                           <input type="text" th:field="*{lieuNaiss}" class="form-control">
+                          <span th:errors="*{lieuNaiss}" class="text-danger" ></span>
                         </div>
                       </div>
                     </div>
@@ -59,18 +66,21 @@
                         <div class="form-group">
                           <label class="bmd-label-floating">date naissance</label>
                           <input type="text" th:field="*{dateNaiss}" class="form-control">
+                          <span th:errors="*{dateNaiss}" class="text-danger" ></span>
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="form-group">
                           <label class="bmd-label-floating">date adhésion</label>
                           <input type="text" th:field="*{dateAdhesion}" class="form-control">
+                          <span th:errors="*{dateAdhesion}" class="text-danger" ></span>
                         </div>
                       </div>
                     <div class="col-md-4">
                        <div class="form-group">
                          <label class="bmd-label-floating">CIN</label>
                          <input type="text" th:field="*{cin}" class="form-control">
+                         <span th:errors="*{cin}" class="text-danger" ></span>
                        </div>
                      </div> 
                     </div>
