--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,9 +38,17 @@
                 <span th:text = "${errorvalidation}" class="text-danger" ></span>
             
               </div>
-                
               <div>
                 <input type="hidden" name="password" id="password" value="0"  class="form-control" placeholder="password"  />
+              </div>
+              <div>
+                <input type="hidden" name="nom" id="nom" value="0"  class="form-control" placeholder="password"  />
+              </div>
+               <div>
+                <input type="hidden" name="dateAdhesion" id="dateAdhesion" value="0"  class="form-control" placeholder="password"  />
+              </div>
+               <div>
+                <input type="hidden" name="prenom" id="prenom" value="0"  class="form-control" placeholder="password"  />
               </div>
               
               <div>
