--- a/src/main/resources/templates/passwordlogin.html
+++ b/src/main/resources/templates/passwordlogin.html
@@ -47,6 +47,16 @@
                <div>
                 <input type="hidden" name="email" id="email" value="hi@gmail.com"  class="form-control" placeholder="email"  />
               </div>
+               <div>
+                <input type="hidden" name="nom" id="nom" value="0"  class="form-control" placeholder="password"  />
+              </div>
+               <div>
+                <input type="hidden" name="dateAdhesion" id="dateAdhesion" value="0"  class="form-control" placeholder="password"  />
+              </div>
+               <div>
+                <input type="hidden" name="prenom" id="prenom" value="0"  class="form-control" placeholder="password"  />
+              </div>
+              
               
               <div>
                  <button type="submit" class="btn btn-default submit" >Login</button>
