--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,21 +57,21 @@
           <!--     <a class="reset_pass" href="#">Lost your password?</a> -->
               </div>
 
-       <!--       <div class="clearfix"></div>
+              <div class="clearfix"></div>
 
               <div class="separator">
-                <p class="change_link">New to site?
-                  <a href="#signup" class="to_register"> Create Account </a>
+                <p class="change_link">nouveau dans le site?
+                  <a th:href="@{signupp}" class="to_register"> Créer un compte </a>
                 </p>
 
-             <!--     <div class="clearfix"></div>
+                  <div class="clearfix"></div>
                 <br />
 
-                <div>
+             <!--   <div>
                   <h1><i class="fa fa-paw"></i> Gentelella Alela!</h1>
                   <p>©2016 All Rights Reserved. Gentelella Alela! is a Bootstrap 3 template. Privacy and Terms</p>
-                </div>
-              </div>-->
+                </div>-->
+              </div>
               
             </form>
           </section>
