--- a/src/main/resources/templates/passwordlogin.html
+++ b/src/main/resources/templates/passwordlogin.html
@@ -39,24 +39,11 @@
             <form th:action="@{/connect}" method="post" th:object="${contact}">
               <h1>Password Form</h1>
               <div>
-                <input type="password" name="password" id="password"  class="form-control" th:field="*{password}" placeholder="password"  />
+                <input type="password" name="password" id="password"  class="form-control" th:field="*{password}" placeholder="password"  required/>
                 <span th:errors = "*{password}" class="text-danger" ></span>
                 <span th:text = "${errorvalidation}" class="text-danger" ></span> 
               </div>
-              
-               <div>
-                <input type="hidden" name="email" id="email" value="hi@gmail.com"  class="form-control" placeholder="email"  />
-              </div>
-               <div>
-                <input type="hidden" name="nom" id="nom" value="0"  class="form-control" placeholder="password"  />
-              </div>
-               <div>
-                <input type="hidden" name="dateAdhesion" id="dateAdhesion" value="0"  class="form-control" placeholder="password"  />
-              </div>
-               <div>
-                <input type="hidden" name="prenom" id="prenom" value="0"  class="form-control" placeholder="password"  />
-              </div>
-              
+
               
               <div>
                  <button type="submit" class="btn btn-default submit" >Login</button>
