--- a/src/main/resources/templates/page.html
+++ b/src/main/resources/templates/page.html
@@ -45,7 +45,8 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
-        <div class="col-md-3 left_col">
+       <div th:replace = "form :: form1"> </div>
+       <!--  <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
               <a href="index.html" class="site_title"><i class="fa fa-gg "></i> <span> Mon association </span></a>
@@ -53,7 +54,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
             <div class="clearfix"></div>
 
-            <!-- menu profile quick info -->
+            menu profile quick info
             <div class="profile clearfix">
               <div class="profile_pic">
                 <img src="images/img.jpg" alt="..." class="img-circle profile_img">
@@ -63,14 +64,14 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                 <h2>John Doe</h2>
               </div>
             </div>
-            <!-- /menu profile quick info -->
+            /menu profile quick info
 
             <br />
 
-            <!-- sidebar menu -->
+            sidebar menu
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section">
-            <!--   <h3>General</h3>  -->  
+              <h3>General</h3>   
                 <ul class="nav side-menu">
                
                
@@ -98,7 +99,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                     </ul>
                   </li>
                   
-            <!--   <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+              <li><a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="chartjs.html">Chart JS</a></li>
                       <li><a href="chartjs2.html">Chart JS2</a></li>
@@ -106,7 +107,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                       <li><a href="echarts.html">ECharts</a></li>
                       <li><a href="other_charts.html">Other Charts</a></li>
                     </ul>
-                  </li> -->
+                  </li>
                   
                      <li><a><i class="fa fa-home"></i> Mon association <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
@@ -117,7 +118,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                 </ul>
               </div>
               <div class="menu_section">
-              </div></div>
+              </div></div> -->
               
                <!--  <h3>Live On</h3> 
                 <ul class="nav side-menu">
@@ -163,11 +164,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
             <!-- /sidebar menu -->
 
             <!-- /menu footer buttons -->
-            <div class="sidebar-footer hidden-small">
+           <!--  <div class="sidebar-footer hidden-small">
               <a data-toggle="tooltip" data-placement="top" title="Paramètres">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
               </a>
-             <!--  --> <a data-toggle="tooltip" data-placement="top" title="Plein Ecran">
+              <a data-toggle="tooltip" data-placement="top" title="Plein Ecran">
                 <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
               </a> 
               
@@ -178,14 +179,14 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
               <a data-toggle="tooltip" data-placement="top" title="Déconnexion" href="login.html">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
-            </div>
+            </div> -->
             
             <!-- /menu footer buttons -->
-          </div>
-        </div>
+          <!-- </div>
+        </div> -->
 
         <!-- top navigation -->
-        <div class="top_nav">
+       <!--  <div class="top_nav">
           <div class="nav_menu">
             <nav>
               <div class="nav toggle">
@@ -202,12 +203,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
                     <li><a href="profile.html"> Mon Profil</a></li>
                     <li>
                       <a href="javascript:;">
-                        <!-- <span class="badge bg-red pull-right">50%</span> -->
+                        <span class="badge bg-red pull-right">50%</span>
                         <span>Paramétres</span>
                       </a>
                     </li>
                     
-                  <!--    <li><a href="javascript:;">Help</a></li> -->
+                     <li><a href="javascript:;">Help</a></li>
                     <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Déconnexion </a></li>
                   </ul>
                 </li>
@@ -217,11 +218,11 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
               </ul>
             </nav>
           </div>
-        </div> 
+        </div>  -->
 					
             
 <div class="right_col" role="main">
-          <div class="">
+<!--           <div class=""> -->
             <div class="page-title">
               <div class="title_left">
                 
@@ -350,6 +351,7 @@ $(document).ready(function() {
 
               </div>
             </div>
+            </div></div>
             </div></div>
            
         <!-- /page content -->
