--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -219,15 +219,15 @@ function includeHTML() {
             
             <div class="col-md-4 col-sm-2 col-xs-3 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i> Total Admins</span>
-              <div class="count">2</div>
+              <div class="count" th:text ="${countadmins}"></div>
               <span class="count_bottom"><i class="green">Administrateur(s) </i> </span>
             </div> 
             </a>
             
-            <a href="#">
+            <a th:href="@{/first}">
            <div class="col-md-4 col-sm-2 col-xs-3 tile_stats_count">
               <span class="count_top"><i class="fa fa-edit"></i> Total Evénements </span>
-              <div class="count green">10</div>
+              <div class="count green" th:text ="${countevents}"></div>
               <span class="count_bottom"><i class="green">Evénement(s) </i> </span>
              
             </div>
@@ -235,7 +235,7 @@ function includeHTML() {
              <a href="#">
             <div class="col-md-4 col-sm-4 col-xs-3 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i> Total Membres</span>
-              <div class="count ">50</div>
+              <div class="count" th:text ="${countmembres}"></div>
               <span class="count_bottom"><i class="green"> Membre(s) </i> </span>
            
             </div>
